remove . from tagline

--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -3,7 +3,7 @@ id: octoprint
 category: productivity
 name: OctoPrint
 version: "1.9.2"
-tagline: The snappy web interface for your 3D printer.
+tagline: The snappy web interface for your 3D printer
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
 developer: OctoPrint
