--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -6,6 +6,10 @@ version: "1.9.2"
 tagline: The snappy web interface for your 3D printer
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
+  Plug your printer into your Umbrel and control and monitor every aspect of your 3D printer and your printing jobs right from within your browser.
+
+
+  OctoPrint's powerful plugin system allows extending its functionality with awesome plugins from the community.
 developer: OctoPrint
 website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
