add priveledged true commented out

--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -9,6 +9,7 @@ services:
 
   web:
     image: octoprint/octoprint:1.9.2@sha256:80ed8b8a1be8713506e7e29fc5b2ec55241242e28a5d8a474a25d9f2aab0843f
+    # privileged: true
     volumes:
       - ${APP_DATA_DIR}/data:/octoprint
       - /dev:/dev
