add rootless test image

--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -8,9 +8,10 @@ services:
       APP_PORT: 7745
     
   web:
-    image: ghcr.io/hay-kot/homebox:v0.9.1@sha256:93eb59c89dc59cf2a6bd3943828ecc30f5a8c8f34fd844c79f54801e914ea64e
+    # update with version-tagged image 
+    image: ghcr.io/hay-kot/homebox:nightly-rootless@sha256:1ec765caa21ad37a1fe64eaed2b10b1652169389a275c914eab71e6fd10232b9
     restart: on-failure
-    # user: 1000:1000
+    user: 1000:1000
     environment:
       - HBOX_LOG_LEVEL=info
       - HBOX_LOG_FORMAT=text
