--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -1,23 +1,15 @@
 manifestVersion: 1
 id: homebox
 name: HomeBox
-tagline: An inventory and organization system built for the Home User
+tagline: An inventory and organization system built for the home user
 category: productivity
 version: "0.9.1"
 port: 7745
 description: >-
-  Homebox is the inventory and organization system built for the Home User! 
+  Homebox is the inventory and organization system built for the home user! With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
   
-  With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
-  
-  - Simple - Homebox is designed to be simple and easy to use. No complicated setup or configuration required. Use either a single docker container, or deploy yourself by compiling the binary for your platform of choice.
-  
-  - Blazingly Fast - Homebox is written in Go which makes it extremely fast and requires minimal resources to deploy. In general idle memory usage is less than 50MB for the whole container.
-  
-  - Portable - Homebox is designed to be portable and run on anywhere. We use SQLite and an embedded Web UI to make it easy to deploy, use, and backup.
 
-  Setup: After installing Homebox, you will need to click the "Register" button to create your first account.
-
+  Homebox is currently in beta and undergoing active development, meaning that it is not yet feature complete and may contain bugs.
 developer: hay-kot
 website: https://hay-kot.github.io/homebox/
 repo: https://github.com/hay-kot/homebox
