category change: productivity --> files

--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: homebox
 name: HomeBox
 tagline: An inventory and organization system built for the home user
-category: productivity
+category: files
 version: "0.9.1"
 port: 7745
 description: >-
