--- a/tautulli/umbrel-app.yml
+++ b/tautulli/umbrel-app.yml
@@ -1,55 +1,14 @@
 manifestVersion: 1
 id: tautulli
-category: Media
+category: media
 name: tautulli
-version: "247"
+version: "2.12.5"
 tagline: Monitor your Plex Media Server
 description: >-
   Tautulli is a 3rd party application that you can run alongside your Plex Media Server to monitor activity and track various statistics. Most importantly, these statistics include what has been watched, who watched it, when and where they watched it, and how it was watched. The only thing missing is "why they watched it", but who am I to question your 42 plays of Frozen. All statistics are presented in a nice and clean interface with many tables and graphs, which makes it easy to brag about your server to everyone else.
-  Features :
-  - Responsive web design viewable on desktop, tablet and mobile web browsers.
-  
-  
-  - Themed to complement Plex/Web.
-  
-  
-  - Easy configuration setup (no separate web server required).
-  
-  
-  - Monitor current Plex Media Server activity.
-  
-  
-  - Fully customizable notifications for stream activity and recently added media.
-  
-  - Top statistics on home page with configurable duration and measurement metric.
-  
-  
-  - Global watching history with search/filtering & dynamic column sorting.
-  
-  
-  - Full user list with general information and comparison stats.
-  
-  
-  - Individual user information including devices IP addresses.
-  
-  
-  - Complete library statistics and media file information.
-  
-  
-  - Rich analytics presented using Highcharts graphing.
-  
-  
-  - Beautiful content information pages.
-  
-  
-  - Full sync list data on all users syncing items from your library.
-  
-  
-  - And many more!!
-developer: JonnyWong16
+
+developer: Tautulli
 website: https://tautulli.com/
-dependencies:
-  - plex
 repo: https://github.com/Tautulli/Tautulli
 support: https://github.com/Tautulli/Tautulli/wiki
 port: 8212
@@ -61,4 +20,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Pranshu Agrawal
-submission: https://github.com/getumbrel/umbrel-apps/pull/289
+submission: https://github.com/getumbrel/umbrel-apps/pull/673
