--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,10 +2,10 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.66.1"
-tagline: High performance photo and video backup solution
+version: "v1.72.2"
+tagline: High-performance photo and video backup solution
 description: >-
-  An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
+  An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
 
   
   ⚠️ Immich is under very active development. Expect bugs and changes. Do not use it as the only way to store your photos and videos!
@@ -19,7 +19,7 @@ description: >-
   
   - Selective album(s) for backup
   
-  - Download photos and videos to local device
+  - Download photos and videos to a local device
   
   - Multi-user support
   
@@ -47,14 +47,18 @@ description: >-
 releaseNotes: >
   This update brings the following new features to Immich:
 
-  - Choose a new feature photo for a person (in order to use this feature, please run the Detect Faces job for ALL)
+  - The mobile app needs to be on the same version of the server v1.72.2 to operate correctly
 
-  - Shift-key selection on the web timeline
+  - Drop support for armV7
 
-  - Support for more raw formats
+  - Update immich CLI tool version in the server and microservices container
 
-  - Album titles now appear in the search results
+  - Manually upload assets from the mobile app
 
+  - Optimized views on the web
+
+  - Album description
+  
   - and more!
 
 
