--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,15 +45,18 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  This update brings the following new features to Immich:
-
-  - The mobile app needs to be on the same version of the server v1.72.2 to operate correctly
+  ⚠️ Breaking Changes
+  
+  - The mobile app needs to be on the same version of the server v1.72.0 to operate correctly.
 
   - Drop support for armV7
+  
 
-  - Update immich CLI tool version in the server and microservices container
+  This update brings the following new features to Immich:
 
   - Manually upload assets from the mobile app
+
+  - Update immich CLI tool version in the server and microservices container
 
   - Optimized views on the web
 
