--- a/vscodium/umbrel-app.yml
+++ b/vscodium/umbrel-app.yml
@@ -8,6 +8,7 @@ description: >-
   VSCodium is a community-driven, freely-licensed binary distribution of Microsoft’s editor VS Code.
 developer: linuxserver
 repo: https://github.com/linuxserver/docker-vscodium
+dependencies: []
 port: 3000
 gallery:
   - 1.png
