tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,11 +45,7 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ Breaking Changes
-  
-  - The mobile app needs to be on the same version of the server v1.72.0 to operate correctly.
-
-  - Drop support for armV7
+  ⚠️ The mobile app needs to be on the same version of the server v1.72.0 to operate correctly.
   
 
   This update brings the following new features to Immich:
