--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,7 +45,7 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ The mobile app needs to be on the same version of the server v1.72.0 to operate correctly.
+  ⚠️ The mobile app needs to be on version v1.72.0 to operate correctly with this update.
   
 
   This update brings the following new features to Immich:
