Update Immich to v1.72.2 (#722)

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,10 +2,10 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.66.1"
-tagline: High performance photo and video backup solution
+version: "v1.72.2"
+tagline: High-performance photo and video backup solution
 description: >-
-  An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
+  An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
 
   
   ⚠️ Immich is under very active development. Expect bugs and changes. Do not use it as the only way to store your photos and videos!
@@ -19,7 +19,7 @@ description: >-
   
   - Selective album(s) for backup
   
-  - Download photos and videos to local device
+  - Download photos and videos to a local device
   
   - Multi-user support
   
@@ -45,16 +45,19 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
+  ⚠️ The mobile app needs to be on version v1.72.0 to operate correctly with this update.
+  
+
   This update brings the following new features to Immich:
 
-  - Choose a new feature photo for a person (in order to use this feature, please run the Detect Faces job for ALL)
+  - Manually upload assets from the mobile app
 
-  - Shift-key selection on the web timeline
+  - Update immich CLI tool version in the server and microservices container
 
-  - Support for more raw formats
+  - Optimized views on the web
 
-  - Album titles now appear in the search results
-
+  - Album description
+  
   - and more!
 
 
