--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - VIRTUAL_HOST=${APP_DOMAIN}
       - WEBPASSWORD=${APP_PASSWORD}
+      - WEB_PORT=8082
       # Listen on all interfaces, permit all origins
       - DNSMASQ_LISTENING=all
     cap_add:
