--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -1,27 +1,21 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: pi-hole_server_1
-      APP_PORT: 80
-      PROXY_AUTH_ADD: "false"
-  
   server:
-    image: pihole/pihole:2023.03.1@sha256:a74dde4800f54d3c0b0839babbac9f2cc7e4b8239ab4a5bc2c25c7328ec1c019
+    image: pihole/pihole:2023.05.2@sha256:8bc45afe1625487aef62859a5bf02f3d7b3429e480f4e29e4689635ab86ec312
     # Pi-hole doesn't currently support running as non-root
     # https://github.com/pi-hole/docker-pi-hole/issues/685
     # user: "1000:1000"
     restart: on-failure
-    ports:
-      - 53:53
-      - 53:53/udp
-      - 67:67/udp
+    network_mode: host
     volumes:
       - ${APP_DATA_DIR}/data/pihole:/etc/pihole/
       - ${APP_DATA_DIR}/data/dnsmasq:/etc/dnsmasq.d/
     environment:
       - VIRTUAL_HOST=${APP_DOMAIN}
       - WEBPASSWORD=${APP_PASSWORD}
+      - WEB_PORT=8082
+      # Listen on all interfaces, permit all origins
+      - DNSMASQ_LISTENING=all
     cap_add:
       - NET_ADMIN
