add optimized for umbrel home key-value pair
Co-authored-by: Mayank Chhabra <mayankchhabra9@gmail.com>

--- a/llama-gpt/umbrel-app.yml
+++ b/llama-gpt/umbrel-app.yml
@@ -20,5 +20,6 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+optimizedForUmbrelHome: true
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/...
