add acknowledgment for Georgi Gerganov

--- a/llama-gpt/umbrel-app.yml
+++ b/llama-gpt/umbrel-app.yml
@@ -24,7 +24,7 @@ description: >-
   
   
   LlamaGPT has been made possible thanks to the incredible open source work from various developers and teams. We extend our gratitude to
-  Mckay Wrigley for building the Chatbot UI, Andrei for developing the Python bindings for llama.cpp, NousResearch for fine-tuning the model,
+  Mckay Wrigley for building the Chatbot UI, Georgi Gerganov for implementing llama.cpp, Andrei for developing the Python bindings for llama.cpp, NousResearch for fine-tuning the model,
   Tom Jobbins for quantizing the model, and Meta for releasing Llama 2 under a permissive license.
   
   
