add models bind mount

--- a/llama-gpt/docker-compose.yml
+++ b/llama-gpt/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     restart: on-failure
     environment:
       MODEL: '/models/llama-2-7b-chat.bin'
+    volumes:
+      - ${APP_DATA_DIR}/data/models:/models
 
   llama-gpt-ui:
     # TODO: update with versioned image + digest
