"- Powered by" => "powered by"

--- a/llama-gpt/umbrel-app.yml
+++ b/llama-gpt/umbrel-app.yml
@@ -3,7 +3,7 @@ id: llama-gpt
 category: ai
 name: LlamaGPT
 version: "1.0.0"
-tagline: Self-hosted, offline ChatGPT-like chatbot - Powered by Llama 2
+tagline: Self-hosted, offline ChatGPT-like chatbot powered by Llama 2
 description: >-
   LlamaGPT is a self-hosted, offline, and private chatbot that provides a ChatGPT-like experience, with no data leaving your device.
   
