--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.72.2"
+version: "v1.73.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,18 +45,18 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ The mobile app needs to be on version v1.72.0 to operate correctly with this update.
+  ⚠️ The mobile app needs to be on version v1.73.0 to operate correctly with this update.
   
 
   This update brings the following new features to Immich:
 
-  - Manually upload assets from the mobile app
+  - Optimized viewing experience for the Album page.
 
-  - Update immich CLI tool version in the server and microservices container
+  - Added option to configure the generated thumbnail resolution.
 
-  - Optimized views on the web
+  - Added option to toggle visibility of the memory reel.
 
-  - Album description
+  - Better quality for thumbnails and generated videos.
   
   - and more!
 
