Update LlamaGPT submission link

--- a/llama-gpt/umbrel-app.yml
+++ b/llama-gpt/umbrel-app.yml
@@ -40,4 +40,4 @@ deterministicPassword: false
 torOnly: false
 optimizedForUmbrelHome: true
 submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel-apps/pull/...
+submission: https://github.com/getumbrel/umbrel-apps/pull/727
