--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -1,15 +1,15 @@
 manifestVersion: 1
 id: octoprint
-category: productivity
+category: files
 name: OctoPrint
 version: "1.9.2"
-tagline: The snappy web interface for your 3D printer
+tagline: A snappy web interface for your 3D printer
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
-  Plug your printer into your Umbrel and control and monitor every aspect of your 3D printer and your printing jobs right from within your browser.
-
-
   OctoPrint's powerful plugin system allows extending its functionality with awesome plugins from the community.
+
+
+  Plug your 3D printer into your Umbrel to control and monitor every aspect of your 3D printer and your printing jobs right from within your browser.
 developer: OctoPrint
 website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
