--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -3,10 +3,10 @@ id: homebox
 name: HomeBox
 tagline: An inventory and organization system built for the home user
 category: files
-version: "0.9.1"
+version: "0.9.2"
 port: 7745
 description: >-
-  Homebox is the inventory and organization system built for the home user! With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
+  Homebox is an inventory and organization system built for the home user! With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
   
 
   Homebox is currently in beta and undergoing active development, meaning that it is not yet feature complete and may contain bugs.
