change description to the one from the Docs

--- a/freshrss/umbrel-app.yml
+++ b/freshrss/umbrel-app.yml
@@ -5,13 +5,24 @@ name: Freshrss
 version: "1.21.0"
 tagline: A free, self-hostable aggregator for rss feeds
 description: >-
-  FreshRSS is a self-hosted RSS and Atom feed aggregator. It is lightweight, easy to work with, powerful, and customizable.
+  FreshRSS is an RSS aggregator and reader. It enables you to seamlessly read and follow content from multiple websites at
+  a glance without the need to browse from one website to another.
 
-  - Follow websites, podcasts and video channels in a single place.
 
-  - Search and save queries for quick access.
-
-  etc...
+  FreshRSS has a lot of features including:
+  
+  - RSS and Atom aggregation
+  
+  - Mark article as favorite if you liked it or if you want to read it later
+  
+  - Filter and search functionality helps to easily find articles
+  
+  - Statistics to show you the publishing frequency all the websites you follow
+  
+  - Import/export of your feeds into OPML format (more information)
+  
+  - and more!
+releaseNotes: ""
 developer: FreshRSS Org
 website: https://freshrss.org/
 dependencies: []
