--- a/tautulli/umbrel-app.yml
+++ b/tautulli/umbrel-app.yml
@@ -8,6 +8,12 @@ description: >-
   Tautulli is a 3rd party application that you can run alongside your Plex Media Server to monitor activity and track various statistics.
   Most importantly, these statistics include what has been watched, who watched it, when and where they watched it, and how it was watched.
   The only thing missing is "why they watched it", but who am I to question your 42 plays of Frozen.
+
+
+  🛠️  SET-UP INSTRUCTIONS
+  
+  During initial set-up, you will need to input your Umbrel device's IP address to connect to your Plex Media Server.
+  You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
 developer: Tautulli
 website: https://tautulli.com/
 dependencies: []
