--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: linuxserver/prowlarr:1.7.4-nightly@sha256:c6c5541b18c41c86c82bd1937d6878f02ffcdeebdf143ac62bbcf0764d2d37f7
+    image: linuxserver/prowlarr:version-1.7.4.3769@sha256:178ca71cf4694c238fd2324a9f3b9be8e8ac5763098bfeb48dfa945b1fd0aa04
     environment:
       - PUID=1000
       - PGID=1000
