--- a/prowlarr/umbrel-app.yml
+++ b/prowlarr/umbrel-app.yml
@@ -6,6 +6,9 @@ version: "v1.7.4.3769"
 tagline: Prowlarr is an indexer manager/proxy
 description: >-
   Prowlarr is an indexer manager/proxy built on the popular *arr .net/reactjs base stack to integrate with your various PVR apps. Prowlarr supports management of both Torrent Trackers and Usenet Indexers. It integrates seamlessly with Lidarr, Mylar3, Radarr, Readarr, and Sonarr offering complete management of your indexers with no per app Indexer setup required (we do it all).
+  
+  
+  On installation of Sonarr, Lidarr or Radarr, Prowlarr will automatically set up the app's connection within its settings.
 developer: Prowlarr
 website: https://prowlarr.com/
 dependencies:
