update release notes

--- a/prowlarr/umbrel-app.yml
+++ b/prowlarr/umbrel-app.yml
@@ -24,10 +24,7 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  On installation of Sonarr, Lidarr or Radarr, Prowlarr will automatically setup the app's connection within its settings
-
-
-  A full list of new features, improvements, and bug fixes: https://github.com/linuxserver/docker-prowlarr/releases
+  Full release notes can be found here: https://github.com/linuxserver/docker-prowlarr/releases
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADSsubmitter: Umbrel
