update plex to 1.32.5.7349

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: ghcr.io/linuxserver/plex:version-1.31.2.6810-a607d384f@sha256:456bc2be6482698755d96542d7f00449077b988c61f57123acc913105ed7ac13 
+    image: linuxserver/plex:version-1.32.5.7349-8f4248874@sha256:4f79fb474e01c629301c90bd3f39d47cc83678e6aceda15effa3e6320f8e296b
     restart: on-failure
     hostname: "${DEVICE_HOSTNAME}"
     environment:
