--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: plex
 category: media
 name: Plex
-version: "1.31.2"
+version: "1.32.5.7349"
 tagline: Stream Movies & TV Shows
 description: >-
   Stream movies and TV shows, plus 300+ channels of live TV, instantly, without a subscription. Watch live TV and movies anywhere, from any device, with Plex.
@@ -26,6 +26,17 @@ torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
 releaseNotes: >-
-  This update includes new features such as improved series and season-level preferences, increased support for different naming formats, and numerous bug fixes.
+  This update includes many bug fixes and performance improvements, as well as the following new features:
+  
+  - New “Deep Cuts” music station.
+  
+  - Hardware transcoding is now supported for SDR media on AMD GPUs on Linux
+  
+  - Hardware transcoding is now supported when running Plex Media Server on headless Windows systems
+  
+  - The GPU used for transcoding can now be selected in server preferences
+  
+  
+  See full release notes here: https://www.videohelp.com/software/Plex/version-history
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
