--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*,/search/*"
 
   server:
-    image: altran1502/immich-server:v1.73.0@sha256:f64041cbd6961b25182b18b3720d51fcced76badd6fcd8fd8aa35de0203e95b5
+    image: ghcr.io/immich-app/immich-server:v1.73.0@sha256:9ffecf7b8e1d65de4a82e1c47a5d1297a353703b4f511dc4b08fbb2a822da576
     command: [ "start.sh", "immich" ]
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
@@ -38,7 +38,7 @@ services:
     restart: on-failure
 
   microservices:
-    image: altran1502/immich-server:v1.73.0@sha256:f64041cbd6961b25182b18b3720d51fcced76badd6fcd8fd8aa35de0203e95b5
+    image: ghcr.io/immich-app/immich-server:v1.73.0@sha256:9ffecf7b8e1d65de4a82e1c47a5d1297a353703b4f511dc4b08fbb2a822da576
     # This service cannot run under 1000:1000
     # And because the uploads are shared
     # We'll run immich specific services as root
@@ -54,7 +54,7 @@ services:
     restart: on-failure
 
   machine-learning:
-    image: altran1502/immich-machine-learning:v1.73.0@sha256:37bda88b5d1f84bb58f5503ffa3e9ccf984edd75421417542b3e4fc6d20163cc
+    image: ghcr.io/immich-app/immich-machine-learning:v1.73.0@sha256:ce503c3049db762dbbb2edefaf2c3dbb059f1c4f59aa1ccd470b418fec48f880
     volumes:
       - ${APP_DATA_DIR}/data/model-cache:/cache
     environment:
@@ -62,7 +62,7 @@ services:
     restart: on-failure
 
   web:
-    image: altran1502/immich-web:v1.73.0@sha256:c8897330303bdc57e57b12263d490e818e6a29ea0a6256311b77bd2ec2a91a79
+    image: ghcr.io/immich-app/immich-web:v1.73.0@sha256:825ac5d717f8a677b314c16df6d4cdc69b42b76f1e46d905f60619537d0becfe
     environment:
       <<: *env
     restart: on-failure
@@ -77,7 +77,7 @@ services:
     restart: on-failure
 
   proxy:
-    image: altran1502/immich-proxy:v1.73.0@sha256:60aeba3c4b17e08606f59a2e3658a19df27c2f392ec7b4af4dc5687110533a62
+    image: ghcr.io/immich-app/immich-proxy:v1.73.0@sha256:34fa5707abf029d392a77515cfb27fd78c4d3fd59816b770e06a2be1b3180487
     environment:
       IMMICH_SERVER_URL: *immich_server_url
       IMMICH_WEB_URL: *immich_web_url
