--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*,/search/*"
 
   server:
-    image: altran1502/immich-server:v1.72.2@sha256:d306708a090a814d6e3660e7fd372403b92600a1624b398ca2c00e8f3eaeaa1a
+    image: ghcr.io/immich-app/immich-server:v1.73.0@sha256:9ffecf7b8e1d65de4a82e1c47a5d1297a353703b4f511dc4b08fbb2a822da576
     command: [ "start.sh", "immich" ]
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
@@ -38,7 +38,7 @@ services:
     restart: on-failure
 
   microservices:
-    image: altran1502/immich-server:v1.72.2@sha256:d306708a090a814d6e3660e7fd372403b92600a1624b398ca2c00e8f3eaeaa1a
+    image: ghcr.io/immich-app/immich-server:v1.73.0@sha256:9ffecf7b8e1d65de4a82e1c47a5d1297a353703b4f511dc4b08fbb2a822da576
     # This service cannot run under 1000:1000
     # And because the uploads are shared
     # We'll run immich specific services as root
@@ -54,7 +54,7 @@ services:
     restart: on-failure
 
   machine-learning:
-    image: altran1502/immich-machine-learning:v1.72.2@sha256:3884b7424bf19256cf0e2b25f6eab099ec08ccffce6e05a8a250234d08a59aed
+    image: ghcr.io/immich-app/immich-machine-learning:v1.73.0@sha256:ce503c3049db762dbbb2edefaf2c3dbb059f1c4f59aa1ccd470b418fec48f880
     volumes:
       - ${APP_DATA_DIR}/data/model-cache:/cache
     environment:
@@ -62,7 +62,7 @@ services:
     restart: on-failure
 
   web:
-    image: altran1502/immich-web:v1.72.2@sha256:e50572dc3ec86dc0874ba7b06f8ba51bced3ce5de2fd84fc0fbba6999ab9bcef
+    image: ghcr.io/immich-app/immich-web:v1.73.0@sha256:825ac5d717f8a677b314c16df6d4cdc69b42b76f1e46d905f60619537d0becfe
     environment:
       <<: *env
     restart: on-failure
@@ -77,7 +77,7 @@ services:
     restart: on-failure
 
   proxy:
-    image: altran1502/immich-proxy:v1.72.2@sha256:40c2876f1db1ac209f4985c98410f529afc11646391e07cdb80402b31c6ad67d
+    image: ghcr.io/immich-app/immich-proxy:v1.73.0@sha256:34fa5707abf029d392a77515cfb27fd78c4d3fd59816b770e06a2be1b3180487
     environment:
       IMMICH_SERVER_URL: *immich_server_url
       IMMICH_WEB_URL: *immich_web_url
