minor tweak to release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,7 +45,7 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ The mobile app needs to be on version v1.74.0 to operate correctly with this update.
+  ⚠️ The mobile app needs to be on at least version v1.73.0 to be fully compatible with this update.
   
 
   This update brings the following new features to Immich:
