Update Immich to v1.74.0 (#735)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.73.0"
+version: "v1.74.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,18 +45,20 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ The mobile app needs to be on version v1.73.0 to operate correctly with this update.
+  ⚠️ The mobile app needs to be on at least version v1.73.0 to be fully compatible with this update.
   
 
   This update brings the following new features to Immich:
 
-  - Optimized viewing experience for the Album page.
+  - Optimized shared link view to use virtual viewports
 
-  - Added option to configure the generated thumbnail resolution.
+  - Add the ability to refresh metadata and regenerate thumbnails for individual photo or video
+  
+  - Upgrade to Flutter 3.13 and improvement of album UI/UX
 
-  - Added option to toggle visibility of the memory reel.
+  - Albums can now be viewed as a list on the web
 
-  - Better quality for thumbnails and generated videos.
+  - Add the ability to set the birthday of a person
   
   - and more!
 
