Update umbrel-app.yml to include the releaseNotes

--- a/vaultwarden/umbrel-app.yml
+++ b/vaultwarden/umbrel-app.yml
@@ -27,6 +27,21 @@ description: >-
   - YubiKey and Duo support
 
    Please note that Vaultwarden is not associated with the Bitwarden® project nor 8bit Solutions LLC. When using this app, please report any bugs or suggestions to us directly, regardless of whatever clients you are using (mobile, desktop, browser, etc), and do not use Bitwarden®'s official support channels.
+releaseNotes: >
+  This release updates Vaultwarden from v1.25.0 to v1.29.1. It includes many bug fixes and performance improvements, as well as the following new features:
+  
+  - Support for Forward Email
+  
+  - WebSocket notifications now work via the default HTTP port
+
+  - The latest Bitwarden Directory Connector can be used now
+  
+  - Support for Argon2 key derivation for the admin page token
+
+  - and more!
+
+
+  The full release notes are available at https://github.com/dani-garcia/vaultwarden/releases
 developer: Daniel García
 website: https://github.com/dani-garcia
 dependencies: []
