--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: networking
 name: Tailscale
-version: "v1.46.1"
+version: "v1.48.1"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -27,10 +27,20 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-releaseNotes: >
-  This release updates Tailscale from v1.40.1 to v1.46.1.
+releaseNotes: >-
+  This release updates Tailscale from v1.46.1 to v1.48.1. It includes bug fixes and performance improvements:
 
+  🐛 Bug Fixes:
+  
+  - Linux
+  
+  Fix: resolve nftables interaction between tailscale and ufw which resulted in blocking subnet routed traffic
+  
+  Synology
+  
+  Fix: determine correct CPU architecture on Synology platforms during tailscale update
 
+  
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
