--- a/gitea/umbrel-app.yml
+++ b/gitea/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: gitea
 category: developer
 name: Gitea
-version: "1.19.1"
+version: "1.20.3"
 tagline: A painless self-hosted Git service
 description: >-
   Gitea is a painless self-hosted Git service. It is similar to
@@ -42,61 +42,61 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This release updates Gitea from 1.18.5 to 1.19.1.
+  This release updates Gitea from 1.19.1 to 1.20.3.
   A full list of new features, improvements, and bug fixes
-  for versions between 1.18.5 and 1.19.1 can be found here: https://github.com/go-gitea/gitea/releases.
+  for versions between 1.19.1 and 1.20.3 can be found here: https://github.com/go-gitea/gitea/releases.
   
   
-  Version 1.19.1 release notes highlights:
+  Version 1.20.3 release notes highlights:
   
+  
+  BREAKING
+
+  - Fix the wrong derive path
+
+
+  SECURITY
+
+  - Fix API leaking Usermail if not logged in
+
   
   FEATURES 
   
-  - Gitea Actions
-
-  - Citing repos
-
-  - Copy file content
-
-  - Pre-built FreeBSD binaries
-
-  - Highlight Note and Warning in markdown quotes
-
-  - Projects for organizations/users
-
-  - Referencing commits across repos
-
-  - Reply by email
+  - Add ThreadID parameter for Telegram webhooks
   
   
   ENHANCEMENTS
   
-  - Add card type to org/user level project on creation, edit and view
+  - Add minimum polyfill to support "relative-time-element" in PaleMoon
+
+  - Move dropzone progress bar to bottom to show filename when uploading
   
-  - Refactor commit status for Actions jobs
+  - Fix dark theme highlight for "NameNamespace"
   
-  - Show errors for KaTeX and mermaid on the preview tab
+  - Display human-readable text instead of cryptic filemodes
   
-  - Show protected branch rule names again
+  - Warn instead of reporting an error when a webhook cannot be found
   
-  - Adjust sticky PR header to cover background
+  - Use 'object-fit: contain' for oauth2 custom icons
   
-  - Discolor pull request tab labels
+  - Fix the topic validation rule and suport dots
   
 
   BUGFIXES
   
-  - Improve error logging for LFS
+  - Fix "issueReposQueryPattern does not match query"
+
+  - Fix incorrect CLI exit code and duplicate error message
+
+  - Fix storage path logic especially for relative paths
+
+  - Fix attachment clipboard copy on insecure origin
   
-  - Fix custom mailer template on Windows platform
-  
-  - Update the value of diffEnd when clicking the Show More button in the DiffFileTree
-  
-  - Make label templates have consistent behavior and priority
-  
-  - Fix accidental overwriting of LDAP team memberships
-  
-  - Fix branch protection priority
+  - Fix wrong middleware sequence
+
+  - Avoiding accessing undefined tributeValues
+
+  - Fix admin queue page title and fix CI failures
   
 
 torOnly: false
