--- a/heimdall/umbrel-app.yml
+++ b/heimdall/umbrel-app.yml
@@ -3,7 +3,7 @@ id: heimdall
 name: Heimdall
 tagline: Organize your most used web sites in a simple way
 category: files
-version: "2.5.5"
+version: "2.5.6"
 port: 7392
 description: >-
   Heimdall is a dashboard for all your web applications. It doesn't need to be limited to applications though, you can add links to anything you like.
@@ -27,7 +27,24 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
+releaseNotes: >
+  This release updates Heimdall from v2.5.5 to v2.5.6. It includes many bug fixes and performance improvements, as well as the following new features:
+
+  - fix: Add more error handling for app test
+
+  - fix: Update jquery, jquery-ui
+  
+  - use jquery-sortablejs instead of jquery-ui
+
+  - fix language setting only available in view
+  
+  - fix: Route titlecolour error
+
+  - Update Korean and Chinese language
+
+  - Added Ukrainian translation
+
+  The full release notes are available at https://github.com/linuxserver/Heimdall/releases
 dependencies: []
 path: ""
 torOnly: false
