Cleanup umbrel-app.yml for release

--- a/monero/umbrel-app.yml
+++ b/monero/umbrel-app.yml
@@ -1,10 +1,9 @@
 manifestVersion: 1.1
 id: monero
-category: Finance
+category: finance
 name: Monero Node
-icon: https://raw.githubusercontent.com/deverickapollo/umbrel-monero/dev/ui/src/assets/community-monero-icon.png
 version: "0.18.2.2"
-tagline: Run your monero node and independently store and validate every single Monero transaction with it.
+tagline: Run a monero node.
 description: >-
   Run your monero node and independently store and validate every single Monero transaction with it.
   This is a full node that will download the entire Monero blockchain and store it on your Umbrel. 
@@ -17,11 +16,10 @@ support: https://github.com/deverickapollo/umbrel-monero/issues
 port: 9976
 submitter: Deverick
 submission: https://github.com/getumbrel/umbrel-apps/pull/690
-gallery:
-  - https://raw.githubusercontent.com/deverickapollo/umbrel-monero/master/pictures/Monero%20Dashboard%20Menu.png
-  - https://raw.githubusercontent.com/deverickapollo/umbrel-monero/master/pictures/Connect%20Wallet.png
-  - https://raw.githubusercontent.com/deverickapollo/umbrel-monero/master/pictures/Advanced%20Settings.png
+gallery: 
+  - 1.jpg 
+  - 2.jpg 
+  - 3.jpg 
 path: ""
 defaultPassword: ""
-releaseNotes: >-
- Initial Release
+releaseNotes: ""
