Update Invidious to 2023.8.7-3450896

--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: invidious
 category: social
 name: Invidious
-version: "2023.4.10-961cae2"
+version: "2023.8.7-3450896"
 tagline: Browse YouTube without tracking or ads
 description: >-
   An open source alternative front-end to YouTube
@@ -48,20 +48,6 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  - Fix for subscription feed not updating.
-
-  - Improve accessibility
-
-  - Videos: Add support for attributed descriptions
-  
-  - Update specs
-
-  - Videos: fix description text offset when emojis are present
-
-  - fix view count extraction
-
-  - Search: Fix channel search
-  
-  - CSS: fix long description overflow
+  - This version includes a workaround for fetching streaming URLs.
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/129
