--- a/file-browser/umbrel-app.yml
+++ b/file-browser/umbrel-app.yml
@@ -2,13 +2,28 @@ manifestVersion: 1
 id: file-browser
 category: files
 name: File Browser
-version: "2.22.4"
+version: "2.24.2"
 tagline: Browse and manage the files you download on your Umbrel
 description: >-
   File Browser lets you upload, delete, preview, rename and edit your folders and files.
 
 
   Easily manage files in the Umbrel's storage folder where your downloads from apps like Transmission, Sonarr, Radarr, and Lidarr are currently held.
+releaseNotes: >-
+  This release updates File Browser from v2.22.4 to v2.24.2. It includes many bug fixes and performance improvements, as well as the following new features:
+
+  - Fix 403 error error when uploading
+
+  - Fix config init for branding.disableUsedPercentage
+
+  - Add option to copy download links from shares
+
+  - Fix xss vulnerability in /api/raw
+
+  - Modify the delete confirmation interface logic
+
+
+  The full release notes are available at https://github.com/filebrowser/filebrowser/releases
 developer: File Browser
 website: https://filebrowser.org/
 dependencies: []
