--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: core-lightning-rtl
 category: bitcoin
 name: Ride The Lightning (Core Lightning)
-version: "0.13.2-beta"
+version: "0.14.0-beta"
 tagline: Manage your Core Lightning node with RTL
 description: >-
   This version of RTL is specifically configured to use your Core Lightning node.
@@ -44,12 +44,33 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Multiple channels with the same peer now visible on the channels page
+  ⚠️ This release covers breaking changes from CLN 23.05, few minor UX enhancements and bug fixes
 
-  - User customizable grids enabling you to control: number of rows on the page, columns you want to view and default sorting order
+  Core Lightning users should note that this update depends on cl-rest v0.10.3 and Core Lightning v23.05. If you are running any version older than 23.05, you should not upgrade to this UI. The changes are not backwards compatible with older versions of Core Lightning
 
-  - Setting to control opening of unannounced channels by default
-  
-  - Other bug fixes and usability fixes
+  Core Lightning:
+
+  - Handle the breaking changes of the msat purge for CLN version v23.05
+
+  - Track active HTLCs on the channels page
+
+  Eclair:
+
+  - Circular rebalancing
+
+  LND:
+
+  - Bugs fixes owing to the breaking changes on the send payment API
+
+  General:
+
+  - Navigation bug fixes from the dashboard
+
+  - Navigation to node and channel lookup from the info page
+
+  - Connect with a peer from the node lookup page
+
+
+  Full release notes can be found here: https://github.com/Ride-The-Lightning/RTL/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
