--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: files
 name: Syncthing
-version: "1.23.2"
+version: "1.23.7"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -26,7 +26,23 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This minor release includes bug fixes and enhancements.
-  A full list of changes from the previous version can be found here: https://github.com/syncthing/syncthing/releases/tag/v1.23.2
+  This release includes bug fixes and enhancements.
+
+  - setLowPriority should not increase process priority when already lower (in Windows)
+
+  - Extended attribute filter editor should be enabled when "send extended attributes" is checked
+
+  - Shared With list ends with comma on 1 device
+
+  - relaysrv crash after some weeks of operation
+
+  - Integrate govulncheck
+
+  - Do not autoexpand tilde sign (~) to an absolute home directory path
+
+  - Error for Windows invalid file names should indicate the invalid character or name part
+  
+  
+  A full list of changes from the previous version can be found here: https://github.com/syncthing/syncthing/releases/tag/v1.23.7
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
