--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -77,6 +77,11 @@ releaseNotes: >
   - Avoid new timezones or non-existing timezones crash Uptime Kuma
 
   - Fixed SMTP notification "Ignore TLS Error" option
+
+
+  ⬆️ Security Fixes
+
+  - Hardening: Avoid exposing the Uptime Kuma version to the public
   
   
   Full changelog for versions 1.21.2 to 1.23.0 can be found here: https://github.com/louislam/uptime-kuma/releases
