--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -40,6 +40,10 @@ path: ""
 defaultPassword: ""
 releaseNotes: >
   Updates Uptime Kuma from version 1.21.2 to 1.23.0.
+
+  🐻 It should be the last minor version of Uptime Kuma v1. I will focus on the development of v2. Stay tuned!
+
+  Update: The last minor version (1.23.x) means that there won't be any new features introduced in v1. However, bug fixes will still be provided. You can expect to see 1.23.1, 1.23.2 and so on.
   
 
   🆕 New Features:
