--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: rotki
 category: finance
 name: rotki
-version: "1.30.0"
+version: "1.30.1"
 tagline: Portfolio tracking, analytics, accounting and tax reporting
 description: >-
   rotki is an open source portfolio tracking, analytics, accounting and tax reporting tool that protects your privacy. 
@@ -25,14 +25,11 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  Rotki v1.30.0 is a big release containing many improvements 
-  and bug fixes the team made in the last month! 
-  The biggest feature coming in this release is support for the Arbitrum One chain, 
-  but also a lot of smaller improvements and new protocol decoders for history events such as gitcoin v2, 
-  gnosis safe etc.
+  rotki v1.30.1 is a small patch release on top of 1.30.0 fixing some of the bugs our users found in the last week.
+  Most important bug fixed here is the fix for the ability to push the DB backup to the server for premium users. 
+  
 
-
-  Full release notes and changes from previous versions can be found here: https://github.com/rotki/rotki/releases/tag/v1.30.0
+  Full release notes and changes from previous versions can be found here: https://github.com/rotki/rotki/releases/tag/v1.30.1
 gallery:
   - 1.jpg
   - 2.jpg
