--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jellyfin
 category: media
 name: Jellyfin
-version: "10.8.9"
+version: "10.8.10"
 tagline: The Free Software Media System
 description: >-
   Jellyfin is the volunteer-built media solution that puts you in control of your media. Stream to any device from your own server, with no strings attached. Your media, your server, your way.
@@ -32,7 +32,17 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Updates Jellyfin from version 10.8.4 to 10.8.9. This update includes a series of stable hotfix releases that improve the overall performance, stability, and functionality of Jellyfin.
+  Updates Jellyfin from version 10.8.9 to 10.8.10. This update includes a series of stable hotfix releases that improve the overall performance, stability, and functionality of Jellyfin.
+
+  ⚠️ CRITICAL SECURITY ADVISORY: GHSA-9p5f-5x8v-x65m and GHSA-89hp-h43h-r5pq can be combined to allow remote code execution for any authenticated Jellyfin user including non-admin users. While the particular execution mechanism of the former dates to the 10.8.0 release, the latter was present for all Jellyfin releases before this point. It is thus absolutely critical for all Jellyfin administrators, regardless of version, to upgrade to this version if they allow any untrusted users and/or expose their instance to the Internet.
+
+  - Fix the canvas size for DVBSUB and DVDSUB subtitles
+
+  - Fix H.264 baseline hwaccel and enable enhanced Nvdec by default
+
+  - Some VAAPI VPP and OpenCL fixes
+
+  - Fix nvenc preset order
   
 
   Full changelogs for Jellyfin releases can be found here: https://github.com/jellyfin/jellyfin/releases
