add new env var hmac_key

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         default_user_preferences:
           feed_menu: ["Trending", "Subscriptions", "Playlists"]
           default_home: Trending
+        hmac_key: "${APP_SEED}"
     healthcheck:
       disable: true
     depends_on:
