simplify release notes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,19 +28,9 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >-
-  This release updates Tailscale from v1.46.1 to v1.48.1. It includes bug fixes and performance improvements:
+  This release updates Tailscale from v1.46.1 to v1.48.1.
 
-  🐛 Bug Fixes:
-  
-  - Linux
-  
-  Fix: resolve nftables interaction between tailscale and ufw which resulted in blocking subnet routed traffic
-  
-  Synology
-  
-  Fix: determine correct CPU architecture on Synology platforms during tailscale update
 
-  
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
