tweak release notes

--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -28,17 +28,15 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Feature dataloaders @apotdevin (#561)
-  
-  - Bump deps @apotdevin (#560)
+  - add dataloaders
 
-  - Echarts implementation @AmbossKeegan (#536)
+  - updated charts (Echarts)
 
-  - Change updating documentation link @aftermath2 (#551)
+  - fix sorting on 'Channels' table
 
-  - Fix channel table sorting fns @secondl1ght (#559)
+  - add signet compatibility
 
   
-  - Full changelog can be found here: https://github.com/apotdevin/thunderhub/releases/tag/v0.13.21
+  - Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
