--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -37,6 +37,6 @@ releaseNotes: >-
   - add signet compatibility
 
   
-  - Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
+  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
