tweak release notes

--- a/file-browser/umbrel-app.yml
+++ b/file-browser/umbrel-app.yml
@@ -12,15 +12,13 @@ description: >-
 releaseNotes: >-
   This release updates File Browser from v2.22.4 to v2.24.2. It includes many bug fixes and performance improvements, as well as the following new features:
 
-  - Fix 403 error error when uploading
+  - added option to copy download links from shares
 
-  - Fix config init for branding.disableUsedPercentage
+  - integrated tus.io for resumable and chunked uploads
 
-  - Add option to copy download links from shares
+  -  added right-to-left (rtl) support
 
-  - Fix xss vulnerability in /api/raw
-
-  - Modify the delete confirmation interface logic
+  - and more!
 
 
   The full release notes are available at https://github.com/filebrowser/filebrowser/releases
