Update Ride The Lightning to v0.14.0-beta (#747)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: bitcoin
 name: Ride The Lightning
-version: "0.13.2-beta-hotfix-1"
+version: "0.14.0-beta"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
@@ -40,10 +40,18 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This release updates the boltz-lnd dependency of the Ride The Lightning app to v1.2.7, and includes an important fix for LND fee estimation.
+  This release updates the Ride The Lightning app to v0.14.0-beta, and includes bug fixes and performance improvements:
+
+  - Navigation bug fixes from the dashboard
+
+  - Connect with a peer from the node lookup page
+
+  - Navigation to node and channel lookup from the info page
+
+  - LND bug fix for the breaking changes on the send payment API
 
 
-  Full release notes for boltz-lnd can be found here: https://github.com/BoltzExchange/boltz-lnd/releases/tag/v1.2.7
+  Full release notes can be found here: https://github.com/Ride-The-Lightning/RTL/releases
 path: ""
 defaultUsername: ""
 deterministicPassword: true
