reword syncthing's developer release notes into more descriptive notes for users

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -26,23 +26,23 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release includes bug fixes and enhancements.
+  This release includes the following bug fixes and enhancements:
 
-  - setLowPriority should not increase process priority when already lower (in Windows)
+  - On Windows, the setLowPriority function should avoid increasing the process priority if it's already set to a lower value.
 
-  - Extended attribute filter editor should be enabled when "send extended attributes" is checked
+  - The extended attribute filter editor should become active when the "send extended attributes" option is selected.
 
-  - Shared With list ends with comma on 1 device
+  - The 'Shared With' list improperly concludes with a comma on a specific device.
 
-  - relaysrv crash after some weeks of operation
+  - There's a fix for the 'relaysrv' which would crash after operating for several weeks.
 
-  - Integrate govulncheck
+  - Integration of govulncheck has been completed.
 
-  - Do not autoexpand tilde sign (~) to an absolute home directory path
+  - The system will no longer automatically expand the tilde sign (~) into the full home directory path.
 
-  - Error for Windows invalid file names should indicate the invalid character or name part
+  - Errors concerning invalid Windows file names will now specify the problematic character or segment of the name.
   
   
-  A full list of changes from the previous version can be found here: https://github.com/syncthing/syncthing/releases/tag/v1.23.7
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
