Update Syncthing to  v1.23.7 (#749)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: files
 name: Syncthing
-version: "1.23.2"
+version: "1.23.7"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -26,7 +26,23 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This minor release includes bug fixes and enhancements.
-  A full list of changes from the previous version can be found here: https://github.com/syncthing/syncthing/releases/tag/v1.23.2
+  This release includes the following bug fixes and enhancements:
+
+  - On Windows, the setLowPriority function should avoid increasing the process priority if it's already set to a lower value.
+
+  - The extended attribute filter editor should become active when the "send extended attributes" option is selected.
+
+  - The 'Shared With' list improperly concludes with a comma on a specific device.
+
+  - There's a fix for the 'relaysrv' which would crash after operating for several weeks.
+
+  - Integration of govulncheck has been completed.
+
+  - The system will no longer automatically expand the tilde sign (~) into the full home directory path.
+
+  - Errors concerning invalid Windows file names will now specify the problematic character or segment of the name.
+  
+  
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
